--- a/inabie/src/pages/home2/home2.html
+++ b/inabie/src/pages/home2/home2.html
@@ -1,10 +1,9 @@
-<div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
-    <div class="flb">
-        <div class="Aligner-item Aligner-item--top"></div>
-        <img src="../../assets/imgs/LOGO-INABIE-MINERD.png">
-        <div class="Aligner-item Aligner-item--bottom"></div>
-    </div>
-</div>
+<!--
+  Generated template for the Home2Page page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
     <ion-navbar>
         <button ion-button menuToggle>
@@ -21,31 +20,35 @@
 
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-start>
-  <ion-icon name="star"></ion-icon>
-  Servicio 1
-</button></ion-col>
+          <ion-icon name="star"></ion-icon>
+          Servicio 1
+        </button>
+            </ion-col>
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-end>
-<ion-icon name="star"></ion-icon>
+          <ion-icon name="star"></ion-icon>
 
-                  Servicio 2
- 
-</button></ion-col>
+          Servicio 2
+
+        </button>
+            </ion-col>
         </ion-row>
         <ion-row>
 
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-start>
-              <ion-icon name="star"></ion-icon>
-              Servicio 3
-            </button></ion-col>
+          <ion-icon name="star"></ion-icon>
+          Servicio 3
+        </button>
+            </ion-col>
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-end>
-              <ion-icon name="star"></ion-icon>
-        
-              Servicio 4
-        
-            </button></ion-col>
+          <ion-icon name="star"></ion-icon>
+
+          Servicio 4
+
+        </button>
+            </ion-col>
         </ion-row>
     </ion-grid>
 </ion-content>
