--- a/inabie/src/pages/home/home.html
+++ b/inabie/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
     <div class="flb">
         <div class="Aligner-item Aligner-item--top"></div>
-        <img src="../../assets/imgs/LOGO-INABIE-MINERD.png">
+        <img src="../../assets/imgs/inabie2.png">
         <div class="Aligner-item Aligner-item--bottom"></div>
     </div>
 </div>
