--- a/inabie/src/pages/terminos/terminos.html
+++ b/inabie/src/pages/terminos/terminos.html
@@ -6,13 +6,24 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>terminos</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>Terminos y condiciones</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+
+    <img class="imgterm" src="../../assets/imgs/term.png">
+
+    <h6>PARA ACCEDER A LOS SERVICIOS DE ESTA APP DEBERA ACEPTAR LOS TERMINOS Y CONDICIONES PRESENTADOS</h6>
+
+    <p>
+        El presente documento establece los términos y condiciones de uso mediante los cuales se regirá el uso de la aplicación móvil InabieAPPRD( en adelante “La aplicación ”), La cual es manejada por el Instituto Nacional de Bienestar Estudiantil
+
+
+    </p>
 
 </ion-content>
