--- a/inabie/src/pages/home2/home2.html
+++ b/inabie/src/pages/home2/home2.html
@@ -4,14 +4,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
     <ion-navbar>
         <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
         <ion-title>InabieApp</ion-title>
     </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
 
