--- a/inabie/src/pages/terminos/terminos.html
+++ b/inabie/src/pages/terminos/terminos.html
@@ -7,7 +7,7 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>Terminos y condiciones</ion-title>
+        <ion-title>InabieAppRD</ion-title>
     </ion-navbar>
 
 </ion-header>
