--- a/inabie/src/pages/home/home.html
+++ b/inabie/src/pages/home/home.html
@@ -10,8 +10,9 @@
         <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-        <ion-title>InabieApp</ion-title>
+        <ion-title>InabieAppRD</ion-title>
     </ion-navbar>
+
 </ion-header>
 
 <ion-content padding>
@@ -21,12 +22,12 @@
 
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-start>
-  <ion-icon name="star"></ion-icon>
+  <img src="../../assets/imgs/schechule.png" height="40px" width="40px">
   Servicio 1
 </button></ion-col>
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-end>
-<ion-icon name="star"></ion-icon>
+<img src="../../assets/imgs/form.png" height="40px" width="40px">
 
                   Servicio 2
  
@@ -36,12 +37,12 @@
 
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-start>
-              <ion-icon name="star"></ion-icon>
+<img src="../../assets/imgs/search.png" height="40px" width="40px">
               Servicio 3
             </button></ion-col>
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-end>
-              <ion-icon name="star"></ion-icon>
+<img src="../../assets/imgs/map.png" height="40px" width="40px">
         
               Servicio 4
         
