--- a/inabie/src/pages/organigrama/organigrama.html
+++ b/inabie/src/pages/organigrama/organigrama.html
@@ -14,5 +14,22 @@
 
 
 <ion-content padding>
+    <img src="../../assets/imgs/imgInabie/organigrama.jpg">
 
+    <ion-grid>
+        <ion-row>
+
+            <ion-col>
+                <button class="button button-dark btndetalles  text-on-bottom" ion-button icon-start>
+        Detalles
+      </button>
+            </ion-col>
+            <ion-col>
+                <button class="button button-dark  text-on-bottom" ion-button icon-end>
+         Descargar
+
+      </button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
