--- a/inabie/src/pages/quienes-somos/quienes-somos.html
+++ b/inabie/src/pages/quienes-somos/quienes-somos.html
@@ -44,6 +44,7 @@
                 Podrá generar ingresos por la oferta de servicios; también podrá recibir contribuciones y donaciones de personas, entidades e instituciones nacionales e internacionales.
 
             </p>
+            <br>
 
             <p>
                 El INABIE tiene la responsabilidad de administrar el Programa de Alimentación Escolar (PAE) y con ello descargar al Ministerio de Educación del peso operativo del mismo. Tiene como propósito “promover el crecimiento y desarrollo integral de los estudiantes
@@ -53,3 +54,4 @@
         </ion-card-content>
     </ion-card>
 </ion-content>
+<page-pages-footer></page-pages-footer>
