--- a/inabie/src/pages/home/home.html
+++ b/inabie/src/pages/home/home.html
@@ -21,9 +21,9 @@
         <ion-row>
 
             <ion-col>
-                <button class="button button-dark customBtn text-on-bottom" ion-button icon-start>
+                <button class="button button-dark customBtn text-on-bottom" (click)="Calendar()" ion-button icon-start>
   <img src="../../assets/imgs/schechule.png" height="40px" width="40px">
-  Servicio 1
+  Calendario
 </button></ion-col>
             <ion-col>
                 <button class="button button-dark customBtn text-on-bottom" ion-button icon-end>
