--- a/inabie/src/pages/calendario/calendario.html
+++ b/inabie/src/pages/calendario/calendario.html
@@ -11,9 +11,7 @@
 
         <ion-buttons end>
 
-            <!-- <button ion-button icon-only>
-              <ion-icon name="add" (click)="addEvent()"></ion-icon>
-            </button> -->
+
         </ion-buttons>
     </ion-navbar>
 
@@ -22,7 +20,11 @@
 
 <ion-content>
 
-    <calendar [eventSource]="eventSource" [calendarMode]="calendar.mode" [currentDate]="calendar.currentDate" [locale]="calendar.locale" step="30" class="calendar"></calendar>
+    <calendar [eventSource]="eventSource" [calendarMode]="calendar.mode" [currentDate]="calendar.currentDate" [locale]="calendar.locale" step="30" class="calendar">
+
+
+    </calendar>
+    <button (click)="leer()">Boton</button>
 
 
 </ion-content>
