--- a/inabie/src/pages/home/home.html
+++ b/inabie/src/pages/home/home.html
@@ -41,10 +41,10 @@
               Servicio 3
             </button></ion-col>
             <ion-col>
-                <button class="button button-dark customBtn text-on-bottom" ion-button icon-end>
+                <button class="button button-dark customBtn text-on-bottom" (click)="Mapa()" ion-button icon-end>
 <img src="../../assets/imgs/map.png" height="40px" width="40px">
         
-              Servicio 4
+              Mapa de Inabie
         
             </button></ion-col>
         </ion-row>
