--- a/inabie/src/pages/mapa/mapa.html
+++ b/inabie/src/pages/mapa/mapa.html
@@ -5,14 +5,17 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
     <ion-navbar>
-        <ion-title>Mapa</ion-title>
+        <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+        <ion-title>Home</ion-title>
     </ion-navbar>
-
 </ion-header>
-
 
 <ion-content padding>
 
+    <div id="map_canvas">
+        <button ion-button (click)="onButtonClick($event)">Demo</button>
+    </div>
 </ion-content>
